--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "openai": "^6.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.0"
+    "react-router-dom": "^6.21.0",
+    "vite-plugin-pwa": "^1.1.0",
+    "workbox-window": "^7.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
