--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@xenova/transformers": "^2.17.2",
     "dotenv": "^17.2.3",
     "openai": "^6.9.1",
+    "pdfjs-dist": "^5.4.394",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
