--- a/supabase/functions/notify-users/deno.json
+++ b/supabase/functions/notify-users/deno.json
@@ -1,3 +1,7 @@
 {
-  "imports": {}
+  "imports": {
+    "std/": "https://deno.land/std@0.168.0/",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2",
+    "web-push": "npm:web-push@3.6.7"
+  }
 }
