--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pdfjs-dist": "^5.4.394",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.21.0",
     "vite-plugin-pwa": "^1.1.0",
     "workbox-window": "^7.4.0",
